# WebGrid

./: .dockerignore  .gitignore  .rusty-hook.toml  404.html  LICENSE  Makefile  README.md  docker-compose.yml  hooks.py  index.html  index.yaml  mkdocs.yml  sitemap.xml  web-grid.code-workspace  webgrid.code-workspace
core/: Cargo.toml  build.rs  build.sh  constants.yml  coverage.sh  deny.toml
core/binary/: Cargo.toml
core/binary/src/: main.rs
core/binary/src/services/: mod.rs
core/domain/: Cargo.toml
core/domain/src/: container.rs  discovery.rs  lib.rs  session.rs
core/domain/src/event/: mod.rs  provisioner.rs
core/domain/src/request/: provisioner.rs
core/domain/src/webdriver/: browser.rs  capabilities.rs  error.rs  instance.rs
core/harness/: Cargo.toml
core/harness/src/: heart.rs  lib.rs  module.rs  service.rs
core/harness/src/redis/: discovery.rs  factory.rs  handle.rs  pubsub.rs
core/libraries/helpers/src/: healthcheck.rs  lib.rs  options.rs
core/libraries/lifecycle/src/: heart_beat.rs  lib.rs  logging.rs
core/libraries/resources/: Cargo.toml
core/libraries/resources/src/: lib.rs  manager.rs  redis.rs  traits.rs
core/libraries/scheduling/: Cargo.toml
core/libraries/scheduling/src/: job_scheduler.rs
core/libraries/storage/src/: database.rs  lib.rs  scan.rs  storage.rs
core/libraries/testing/src/: resources.rs
core/modules/: Cargo.toml  build.rs
core/modules/src/: lib.rs  options.rs
core/modules/src/api/: mod.rs  options.rs  server.rs
core/modules/src/collector/: mod.rs  options.rs
core/modules/src/gangway/: created_publisher.rs  mod.rs  options.rs
core/modules/src/manager/: mod.rs  options.rs  scheduling.rs
core/modules/src/node/: metadata.rs  mod.rs  options.rs
core/modules/src/orchestrator/: mod.rs  options.rs
core/src/: constants.rs  lib.rs  main.rs
core/src/domain/: container.rs  discovery.rs  mod.rs  session.rs
core/src/domain/event/: provisioner.rs
core/src/domain/request/: mod.rs  provisioner.rs
core/src/domain/webdriver/: browser.rs  capabilities.rs  creation.rs  error.rs  instance.rs  mod.rs
core/src/harness/: heart.rs  mod.rs  module.rs  redis.rs  service.rs
core/src/harness/redis/: discovery.rs  factory.rs  mod.rs  pubsub.rs
core/src/libraries/: mod.rs
core/src/libraries/helpers/: backoff.rs  capabilities.rs  constants.rs  healthcheck.rs  keys.rs  lua.rs  mod.rs  timeout.rs
core/src/libraries/lifecycle/: heart.rs  heart_beat.rs  logging.rs  mod.rs
core/src/libraries/metrics/: entry.rs  mod.rs  processor.rs
core/src/libraries/net/: advertise.rs  discovery.rs  messaging.rs  mod.rs
core/src/libraries/recording/: mod.rs  webvtt.rs
core/src/libraries/resources/: manager.rs  mod.rs  redis.rs  traits.rs
core/src/libraries/scheduling/: job.rs  job_scheduler.rs  mod.rs  status_server.rs  task_manager.rs
core/src/libraries/storage/: database.rs  mod.rs  scan.rs  storage_handler.rs
core/src/libraries/testing/: harness.rs  lock_manager.rs  mod.rs  resources.rs  setup.rs
core/src/libraries/tracing/: constants.rs  init.rs  mod.rs  propagation.rs
core/src/module/: mod.rs  options.rs
core/src/module/api/: mod.rs  options.rs  server.rs
core/src/module/collector/: mod.rs  options.rs
core/src/module/gangway/: created_publisher.rs  mod.rs  options.rs
core/src/module/manager/: mod.rs  options.rs  scheduling.rs
core/src/module/node/: metadata.rs  mod.rs  options.rs
core/src/module/orchestrator/: mod.rs  options.rs
core/src/services/: mod.rs  options.rs
core/src/services/api/: context.rs  mod.rs
core/src/services/gc/: context.rs  mod.rs
core/src/services/manager/: context.rs  mod.rs
core/src/services/metrics/: context.rs  data_collector.rs  mod.rs  structures.rs
core/src/services/node/: context.rs  mod.rs
core/src/services/orchestrator/: mod.rs
core/src/services/proxy/: context.rs  mod.rs  routing_info.rs
core/src/services/storage/: context.rs  mod.rs
core/webgrid/: Cargo.toml  build.rs
core/webgrid/src/: main.rs  options.rs
services/libraries/helpers/: Cargo.toml  build.rs
services/libraries/helpers/src/: backoff.rs  env.rs  keys.rs  lib.rs  lua.rs  ports.rs  timeout.rs
services/libraries/lifecycle/: Cargo.toml
services/libraries/lifecycle/src/: heart.rs  heart_beat.rs  lib.rs  logging.rs
services/libraries/resources/: Cargo.toml
services/libraries/resources/src/: manager.rs  redis.rs
services/libraries/scheduling/: Cargo.toml
services/libraries/scheduling/src/: job.rs  lib.rs  status_server.rs  task_manager.rs
services/libraries/storage/: Cargo.toml  build.rs
services/libraries/storage/src/: database.rs  scan.rs  storage.rs
services/libraries/testing/: Cargo.toml
services/libraries/testing/src/: harness.rs  lib.rs  setup.rs
services/manager/: Cargo.toml
services/manager/src/: capabilities.rs  config.rs  context.rs  main.rs  session.rs  structures.rs
services/manager/src/jobs/: registration.rs  session_handler.rs
services/manager/src/tasks/: create_session.rs  mod.rs
services/metrics/: Cargo.toml
services/metrics/src/: data_collector.rs  lib.rs  main.rs  structures.rs
services/node/: Cargo.toml
services/node/src/: config.rs  context.rs  driver.rs  lib.rs  main.rs  proxy.rs  recorder.rs  startup.rs  structs.rs
services/node/src/jobs/: mod.rs  proxy.rs  recorder.rs
services/node/src/tasks/: driver.rs  init_service.rs  init_session.rs  mod.rs  terminate.rs
services/orchestrators/core/: Cargo.toml
services/orchestrators/core/src/: config.rs  context.rs  lib.rs  provisioner.rs  reclaim.rs
services/orchestrators/docker/: Cargo.toml
services/orchestrators/docker/src/: lib.rs  main.rs  provisioner.rs
services/orchestrators/k8s/: Cargo.toml
services/orchestrators/k8s/configs/: job.yaml  service.yaml
services/proxy/: Cargo.toml
services/proxy/src/: config.rs  context.rs  main.rs  proxy.rs  watcher.rs
services/shared/: Cargo.toml
services/shared/src/: capabilities.rs  database.rs  lib.rs  lifecycle.rs  logging.rs  metrics.rs  ports.rs
services/webgrid/: Cargo.toml
services/webgrid/src/: main.rs  orchestrator.rs
(+1873 files in other folders)
