[package]
name = "webgrid"
version = "0.0.0"
authors = ["Til Blechschmidt <til@blechschmidt.de>"]
edition = "2018"

[dependencies]
tokio = { version = "1.2", default-features = false, features = ["full"] }
sqlx = { version = "0.5", default-features = false, features = [ "runtime-tokio-native-tls", "macros", "sqlite" ] }
pretty_env_logger = "0.4"
async-trait = "0.1"
lazy_static = "1.4"
rand = "0.8"
log = "0.4"
regex = "1.3"
redis = { version = "0.19", default-features = false, features = ["tokio-comp", "script"] }
futures = "0.3"
thiserror = "1.0"
anyhow = "1.0"
hyper = "0.14"
structopt = "0.3"
warp = { version = "0.3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
uuid = { version = "0.8", features = ["v4"] }

# Docker
bollard = { version = "0.10", optional = true }

# Kubernetes
time = { version = "0.2", optional = true }
kube = { version = "0.50", optional = true }
kube-derive = { version = "0.50", optional = true }
k8s-openapi = { version = "0.11", default-features = false, features = ["v1_17"], optional = true }
serde_yaml = { version = "0.8", optional = true }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
sqlx = { version = "0.5", default-features = false, features = [ "macros", "sqlite", "runtime-tokio-native-tls" ] }
tokio = { version = "1.2", features = ["full"] }
git2 = "0.13"

[features]
default = ["gc", "api", "proxy", "manager", "node", "metrics", "storage", "docker", "kubernetes"]
gc = []
api = []
proxy = []
manager = []
node = []
metrics = []
storage = []
orchestrator = []
kubernetes = ["orchestrator", "time", "kube", "kube-derive", "k8s-openapi", "serde_yaml"]
docker = ["orchestrator", "bollard"]

[profile.release]
lto = true
