[package]
name = "webgrid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.6", features = ["macros"] }
structopt = "0.3"
tracing = { git = "https://github.com/tokio-rs/tracing", version = "0.2", features = ["log"] }
tracing-subscriber = { git = "https://github.com/tokio-rs/tracing", version = "0.3", default-features = false, features = ["env-filter", "fmt", "ansi", "json"] }
anyhow = "1.0"

harness = { path = "../harness" }
modules = { path = "../modules" }

[build-dependencies]
git2 = "0.13"