[package]
name = "manager"
version = "0.1.0"
authors = ["Til Blechschmidt <til@blechschmidt.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scheduling = { path = "../libraries/scheduling" }
resources = { path = "../libraries/resources" }
lifecycle = { path = "../libraries/lifecycle" }
helpers = { path = "../libraries/helpers" }
async-trait = "0.1"
log = "0.4"
anyhow = "1.0"
warp = { version = "0.2", default-features = false }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.16", features = ["tokio-rt-core"] }
chrono = "0.4"
uuid = { version = "0.8", features = ["v4"] }
lazy_static = "1.4"
regex = "1.3"
structopt = "0.3"