[package]
name = "metrics"
version = "0.1.0"
authors = ["Til Blechschmidt <til@blechschmidt.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scheduling = { path = "../libraries/scheduling" }
resources = { path = "../libraries/resources" }
lifecycle = { path = "../libraries/lifecycle" }
helpers = { path = "../libraries/helpers" }
async-trait = "0.1.31"
tokio = { version = "0.2.21", default-features = false, features = ["rt-threaded", "io-driver", "macros", "sync"] }
log = "0.4"

#redis = { version = "0.16.0", features = ["tokio-rt-core"] }
#tokio = { version = "0.2", features = ["macros"] }
#hyper = "0.13.5"
#chrono = "0.4.11"
#config = "0.10"
#serde = { version = "1.0.110", features = ["derive"] }
#warp = "0.2"
#log = "0.4"
