[package]
name = "node"
version = "0.1.0"
authors = ["Til Blechschmidt <til@blechschmidt.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
tokio = { version = "0.2", features = ["macros", "time", "sync"] }
hyper = "0.13.5"
futures = "0.3.5"
redis = { version = "0.16.0", features = ["tokio-rt-core"] }
config = "0.10"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
regex = "1"
chrono = "0.4.11"
lazy_static = "1.4.0"
log = "0.4"
