[package]
name = "node"
version = "0.1.0"
authors = ["Til Blechschmidt <til@blechschmidt.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scheduling = { path = "../libraries/scheduling" }
resources = { path = "../libraries/resources" }
lifecycle = { path = "../libraries/lifecycle" }
helpers = { path = "../libraries/helpers" }
async-trait = "0.1.31"
tokio = { version = "0.2.21", default-features = false, features = ["rt-threaded", "io-driver", "macros", "sync"] }
log = "0.4"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
anyhow = "1.0.31"
redis = { version = "0.16.0", features = ["tokio-rt-core"] }
hyper = "0.13.5"
regex = "1"
lazy_static = "1.4.0"
chrono = "0.4.12"
thiserror = "1.0.20"