[package]
name = "node"
version = "0.1.0"
authors = ["Til Blechschmidt <til@blechschmidt.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scheduling = { path = "../libraries/scheduling" }
resources = { path = "../libraries/resources" }
lifecycle = { path = "../libraries/lifecycle" }
helpers = { path = "../libraries/helpers" }
async-trait = "0.1"
tokio = { version = "0.2", default-features = false, features = ["sync"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
redis = { version = "0.16", features = ["tokio-rt-core"] }
hyper = "0.13"
regex = "1.3"
lazy_static = "1.4"
chrono = "0.4"
thiserror = "1.0"
structopt = "0.3"