[package]
name = "proxy"
version = "0.1.0"
authors = ["Til Blechschmidt <til@blechschmidt.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
redis = "0.15.1"
config = "0.10"
lazy_static = "1.4.0"
regex = "1"
rand = "0.7"
hyper = "0.13.4"
tokio = { version = "0.2", features = ["macros", "sync"] }
serde = { version = "1.0.105", features = ["derive"] }
log = "0.4"