[package]
name = "proxy"
version = "0.1.0"
authors = ["Til Blechschmidt <til@blechschmidt.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scheduling = { path = "../libraries/scheduling" }
resources = { path = "../libraries/resources" }
lifecycle = { path = "../libraries/lifecycle" }
helpers = { path = "../libraries/helpers" }
async-trait = "0.1.31"
lazy_static = "1.4.0"
rand = "0.7.3"
log = "0.4.8"
regex = "1.3.8"
redis = { version = "0.16.0", default-features = false, features = ["tokio-comp"] }
futures = "0.3.5"
thiserror = "1.0.19"
anyhow = "1.0.31"
hyper = "0.13.5"
tokio = { version = "0.2.21", default-features = false, features = ["rt-threaded", "io-driver", "macros"] }