[package]
name = "proxy"
version = "0.1.0"
authors = ["Til Blechschmidt <til@blechschmidt.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scheduling = { path = "../libraries/scheduling" }
resources = { path = "../libraries/resources" }
lifecycle = { path = "../libraries/lifecycle" }
helpers = { path = "../libraries/helpers" }
async-trait = "0.1"
lazy_static = "1.4"
rand = "0.7"
log = "0.4"
regex = "1.3"
redis = { version = "0.16", default-features = false, features = ["tokio-comp"] }
futures = "0.3"
thiserror = "1.0"
anyhow = "1.0"
hyper = "0.13"
tokio = { version = "0.2", default-features = false }
structopt = "0.3"