[package]
name = "shared"
version = "0.1.0"
authors = ["Til Blechschmidt <til@blechschmidt.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
redis = "0.15.1"
tokio = { version = "0.2", features = ["signal"] }
futures = "0.3.4"
chrono = "0.4.11"
log = "0.4"
pretty_env_logger = "0.4"