[package]
name = "webgrid"
version = "0.1.0"
authors = ["Til Blechschmidt <til@blechschmidt.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
helpers = { path = "../libraries/helpers" }
metrics = { path = "../metrics", optional = true }
manager = { path = "../manager", optional = true }
node = { path = "../node", optional = true }
proxy = { path = "../proxy", optional = true }
orchestrator_core = { path = "../orchestrators/core", optional = true }
orchestrator_k8s = { path = "../orchestrators/k8s", optional = true }
orchestrator_docker = { path = "../orchestrators/docker", optional = true }
structopt = "0.3"
tokio = { version = "0.2", default-features = false, features = ["rt-threaded", "io-driver", "macros"] }
anyhow = "1.0"
pretty_env_logger = "0.4"

[features]
default = ["service_metrics", "service_manager", "service_proxy", "service_node", "service_orchestrator", "docker", "kubernetes"]

service_metrics = ["metrics"]
service_manager = ["manager"]
service_node = ["node"]
service_proxy = ["proxy"]
service_orchestrator = ["orchestrator_core"]

kubernetes = ["service_orchestrator", "orchestrator_k8s"]
docker = ["service_orchestrator", "orchestrator_docker"]