[package]
name = "webgrid"
version = "0.1.0"
authors = ["Til Blechschmidt <til@blechschmidt.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", default-features = false, features = ["rt-threaded", "io-driver", "macros", "sync"] }
pretty_env_logger = "0.4"
scheduling = { path = "../libraries/scheduling" }
resources = { path = "../libraries/resources" }
lifecycle = { path = "../libraries/lifecycle" }
helpers = { path = "../libraries/helpers" }
storage_lib = { path = "../libraries/storage", package = "storage" }
async-trait = "0.1"
lazy_static = "1.4"
rand = "0.7"
log = "0.4"
regex = "1.3"
redis = { version = "0.16", default-features = false, features = ["tokio-rt-core"] }
futures = "0.3"
thiserror = "1.0"
anyhow = "1.0"
hyper = "0.13"
structopt = "0.3"
warp = { git = "https://github.com/TilBlechschmidt/warp", branch = "file-path", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
uuid = { version = "0.8", features = ["v4"] }

# Docker
bollard = { version = "0.7", optional = true }

# Kubernetes
time = { version = "0.2", optional = true }
kube = { version = "0.35", optional = true }
kube-derive = { version = "0.35", optional = true }
k8s-openapi = { version = "0.8", default-features = false, features = ["v1_17"], optional = true }
serde_yaml = { version = "0.8", optional = true }

[dev-dependencies]
testing = { path = "../libraries/testing" }

[features]
default = ["proxy", "manager", "node", "metrics", "storage", "docker", "kubernetes"]
proxy = []
manager = []
node = []
metrics = []
storage = []
orchestrator = []
kubernetes = ["orchestrator", "time", "kube", "kube-derive", "k8s-openapi", "serde_yaml"]
docker = ["orchestrator", "bollard"]
