[package]
name = "helpers"
version = "0.1.0"
authors = ["Til Blechschmidt <til@blechschmidt.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
anyhow = "1.0.31"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
log = "0.4.8"
redis = { version = "0.16.0", features = ["tokio-rt-core"] }
hyper = "0.13"
tokio = { version = "0.2.21", default-features = false, features = ["rt-threaded", "io-driver", "time"] }