[package]
name = "lifecycle"
version = "0.1.0"
authors = ["Til Blechschmidt <til@blechschmidt.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scheduling = { path = "../scheduling" }
resources = { path = "../resources" }
async-trait = "0.1.31"
futures = "0.3.5"
log = "0.4.8"
chrono = "0.4.11"
redis = { version = "0.16.0", default-features = false, features = ["tokio-comp"] }
pretty_env_logger = "0.4.0"
anyhow = "1.0.31"
tokio = { version = "0.2.21", default-features = false, features = ["rt-threaded", "io-driver", "signal"] }