[package]
name = "lifecycle"
version = "0.1.0"
authors = ["Til Blechschmidt <til@blechschmidt.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scheduling = { path = "../scheduling" }
resources = { path = "../resources" }
async-trait = "0.1"
futures = "0.3"
log = "0.4"
chrono = "0.4"
redis = { version = "0.16", default-features = false, features = ["tokio-comp"] }
anyhow = "1.0"
tokio = { version = "0.2", default-features = false, features = ["signal"] }