[package]
name = "resources"
version = "0.1.0"
authors = ["Til Blechschmidt <til@blechschmidt.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
helpers = { path = "../helpers" }
scheduling = { path = "../scheduling" }
tokio = { version = "0.2", default-features = false, features = ["rt-threaded", "io-driver"] }
async-trait = "0.1"
futures = "0.3"
log = "0.4"
redis = { version = "0.16", default-features = false, features = ["tokio-rt-core", "script"] }
lazy_static = "1.4"
thiserror = "1.0"