[package]
name = "scheduling"
version = "0.1.0"
authors = ["Til Blechschmidt <til@blechschmidt.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
helpers = { path = "../helpers" }
log = "0.4"
async-trait = "0.1"
futures = "0.3"
anyhow = "1.0"
tokio = { version = "0.2", default-features = false, features = ["rt-threaded", "io-driver", "time"] }
hyper = "0.13.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"