[package]
name = "storage"
version = "0.1.0"
authors = ["Til Blechschmidt <til@blechschmidt.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", default-features = false, features = ["time", "sync", "fs", "stream"] }
sqlx = { version = "0.3", default-features = false, features = [ "runtime-tokio", "macros", "sqlite" ] }
thiserror = "1.0"
log = "0.4"
chrono = "0.4"
futures = "0.3"
uuid = { version = "0.8", features = ["v4"] }

[build-dependencies]
sqlx = { version = "0.3", default-features = false, features = [ "runtime-tokio", "macros", "sqlite" ] }
tokio = { version = "0.2", features = ["macros"] }