[package]
name = "testing"
version = "0.1.0"
authors = ["Til Blechschmidt <til@blechschmidt.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
helpers = { path = "../helpers" }
resources = { path = "../resources" }
scheduling = { path = "../scheduling" }
async-trait = "0.1.31"
redis = { version = "0.16.0", default-features = false, features = ["tokio-comp"] }
lazy_static = "1.4.0"
tokio = { version = "0.2.21", default-features = false, features = ["rt-threaded", "io-driver"] }

[dev_dependencies]
futures = "0.3.5"