[package]
name = "orchestrator_docker"
version = "0.1.0"
authors = ["Til Blechschmidt <til@blechschmidt.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
helpers = { path = "../../libraries/helpers" }
orchestrator_core = { path = "../core" }
tokio = { version = "0.2", features = ["macros"] }
bollard = "0.5"
log = "0.4"
