[package]
name = "orchestrator_docker"
version = "0.1.0"
authors = ["Til Blechschmidt <til@blechschmidt.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
helpers = { path = "../../libraries/helpers" }
orchestrator_core = { path = "../core" }
bollard = "0.7"
log = "0.4"
structopt = "0.3"