[package]
name = "orchestrator_k8s"
version = "0.1.0"
authors = ["Til Blechschmidt <til@blechschmidt.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../../shared" }
orchestrator_core = { path = "../core" }
tokio = { version = "0.2", features = ["macros"] }
time = "0.2.16"
kube = "0.34.0"
kube-derive = "0.34.0"
k8s-openapi = { version = "0.8.0", default-features = false, features = ["v1_17"] }
serde_yaml = "0.8.12"
serde = { version = "1.0.110", features = [] }
log = "0.4"
