[package]
name = "orchestrator_k8s"
version = "0.1.0"
authors = ["Til Blechschmidt <til@blechschmidt.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
helpers = { path = "../../libraries/helpers" }
orchestrator_core = { path = "../core" }
time = "0.2"
kube = { version = "0.35", default-features = false, features = ["rustls-tls"] }
kube-derive = "0.35"
k8s-openapi = { version = "0.8", default-features = false, features = ["v1_17"] }
serde_yaml = "0.8"
serde = { version = "1.0", features = [] }
log = "0.4"
structopt = "0.3"